[package]
name = "bmi088"
version = "0.2.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2024"
description = "BMI088 6DOF IMU driver for embedded hal"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/bmi088"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "BMI088",
    "IMU",
    "accelerometer",
    "gyroscope",
]
readme = "README.md"

[dependencies]
embedded-hal = { version = "1.0.0" }

[dev-dependencies]
embedded-hal-mock = "0.7.1"
